# langchain_agent1

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_slask.txt  chainlit.md  chainlit_app.py  chainlit_en-US.md  chat_agent.py  config.json  doc_rag_init.py  docker-compose.yml  initialize_rag.py  mcp_server.py  preload_models.py  pyproject.toml  pyrightconfig.json  query_processing_flow.md  react.py  requirements.txt  retrieval-chain.py  slask.txt  temp_doc_rag.py  test.py  web-retrieval.py
.chainlit/: config.toml
backend/: agent.py  agent_backup.py  llm_config.py  main.py  retrievers.py  run_chainlit.py
backend/tools/: __init__.py  duckduckgo_web_search.py  list_tracked_repositories.py  retrieve_comms_info.py  retrieve_github_info.py
config/: comms.json  comms_documentation.json  comms_systemmessage.md  github_repositories.json  github_systemmessage.md  llm_config.py  supervisor_systemmessage.md  system_prompt.txt  system_prompt_comms_agent.txt  system_prompt_github.txt
data/comms_pages_as_md/: aix-calculator.md  aix-single-staking.md  aixt.md  migration-information.md  mp-on-base.md  sleepingagents-pt3.md
docs/: architecture.md  config.md  config.toml.example  index.md  ingestion.md  modules.md  usage.md
ingestion/: base_ingestor.py  github_ingestor.py  local_md_ingestor.py  web_ingestor.py
plans/: doc_rag_verification.md  langgraph_supervisor.md
public/: custom.js
scripts/: initialize_comms_web_rag.py  initialize_github_rag.py  initialize_local_md_rag.py  preload_models.py
src/: agent.py  app.py  retrievers.py  run_chainlit.py  slack_server.py
src/tools/: __init__.py  current_datetime.py  list_tracked_repositories.py  read_github_file.py  retrieve_comms_info.py  retrieve_github_info.py  retrieve_slack_history.py
util/: progress.py
util/docs/: project_workflow.md
