[project]
name = "my-langchain-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chainlit>=2.9.5",
    "colorama>=0.4.6",
    "ddgs>=9.10.0",
    "fastmcp>=0.9.0",
    "gitpython>=3.1.46",
    "langchain>=0.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",
    "langchain-huggingface>=1.2.0",
    "langchain-xai>=1.2.1",
    "langgraph-checkpoint==4.0.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
]
