[project]
name = "Slask"
version = "0.5"
description = "Agentic LangChain-based RAG application"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chainlit>=2.9.5",
    "colorama>=0.4.6",
    "ddgs>=9.10.0",
    "fastmcp>=0.9.0",
    "gitpython>=3.1.46",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-chroma>=0.1.4",        # Nu kan vi köra stabila versioner
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "langchain-huggingface>=0.1.0,<0.2.0",
    "langchain-xai>=0.1.0,<0.2.0",
    "langgraph-checkpoint==4.0.0",
    "psutil>=7.2.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "trafilatura>=1.0.0",
]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "pyright>=1.1.408",
]
